Add binh-luan CRUD APIs
